# tock-teensy

./: README.md
boards/teensy-3.2/: Cargo.toml  Makefile
boards/teensy-32/: chip_layout.ld
boards/teensy-32/src/tests/: blink.rs  mod.rs
chips/mk20/: Cargo.toml
chips/mk20/src/: gpio.rs  lib.rs
